Adding logs of the Game in the Panel with colors.